<resources>
    <string name="app_name">机智云单品灯2代</string>
    <string name="app_company">机智云账号登录</string>
    <string name="name_hint">请输入手机号</string>
    <string name="password_hint">请输入登录密码</string>
    <string name="name_digits">0123456789</string>
    <string name="psw_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="forget_password"><u>忘记密码？</u></string>
    <string name="login">登录</string>
    <string name="register">注册新用户</string>
    <string name="toast_name_empet">用户名不能为空</string>
    <string name="toast_name_wrong">请输入登陆账号</string>
    <string name="toast_psw_empet">密码不能为空</string>
    <string name="toast_login_successful">登录成功</string>
    <string name="toast_login_failed">登录失败</string>
    <string name="toast_third_login_failed">第三方登录失败</string>
    <string name="loadingtext">处理中，请稍等...</string>
    <string name="pass">跳 过 > ></string>
    <string name="QQ">QQ登录</string>
    <string name="Wechat">微信登录</string>
    <string name="double_click">再按一次退出程序</string>
    <string name="getcode">获取验证码</string>
    <string name="getcode_again">重新获取验证码</string>
    <string name="timer_message">秒后重新获取</string>
    <string name="code_hint">请输入验证码</string>
    <string name="send_successful">手机验证码发送成功</string>
    <string name="send_failed">手机验证码发送失败</string>
    <string name="toast_code_empet">验证码不能为空</string>
    <string name="toast_psw_wrong">请输入密码</string>
    <string name="toast_psw_short">密码不能小于6位</string>
    <string name="no_getcode">验证码无效</string>
    <string name="btn_register">立即注册</string>
    <string name="register_successful">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="reset">重置密码</string>
    <string name="reset_successful">重置成功</string>
    <string name="reset_failed">重置失败</string>
    <string name="add_device">添加</string>
    <string name="add_device_menu">添加设备</string>
    <string name="like_img">接通电源，确认设备处于待连接状态，如上图亮红灯</string>
    <string name="noredlight">不是亮红灯？</string>
    <string name="finished">已完成上述操作</string>
    <string name="join_by_hands">手动连接设备</string>
    <string name="next">下一步</string>
    <string name="reset_device">重置设备</string>
    <string name="resetmessage">如下图，按一下【KEY 2】，看到【RGB LED】亮红灯，代表重置成功</string>
    <string name="choosedevice">选择您要连接的设备</string>
    <string name="nodevice">没有我的设备？</string>
    <string name="network_error">请切换至Wi-Fi环境</string>
    <string name="itemtext_start">发现设备</string>
    <string name="itemtext_end">，快速配置</string>
    <string name="ssid_start">XPG-GAgent</string>
    <string name="check_psw_title">检查密码</string>
    <string name="check_psw">检查Wi-Fi密码是否正确</string>
    <string name="configuration_title">输入Wi-Fi密码，配置设备连接网络</string>
    <string name="softPsw_hint">请输入Wi-Fi密码</string>
    <string name="workwifi_isnull">确定密码为空吗？</string>
    <string name="choose_wifi_list_title">请选择可用的Wi-Fi网络</string>
    <string name="softssid_error">设备热点故障，请返回</string>
    <string name="configcountDown_title">设备连接网络</string>
    <string name="configuration_successful">配置成功</string>
    <string name="configuration_failed">配置失败</string>
    <string name="prompt">提示</string>
    <string name="cancel_besure">确定放弃配置吗？</string>
    <string name="cancel">取消</string>
    <string name="besure">确定</string>
    <string name="device_connect">手机已连接设备，正在配置设备连接网络...</string>
    <string name="timer_text">设备连接网络后，手机可以远程控制设备</string>
    <string name="softap_loading">正在连接设备热点，请稍等...</string>
    <string name="please_check">设备连接网络不成功，请检查：</string>
    <string name="join_failed_title">连接不成功</string>
    <string name="check_first">1、wifi密码是否正确：</string>
    <string name="check_second">2、网络是否能正常上网：</string>
    <string name="check_third">3、手机、设备与路由器是否离得比较远：</string>
    <string name="check_fourth">4、路由器是否设置了限制：</string>
    <string name="config_again">重试</string>
    <string name="devicelist_title">我的设备</string>
    <string name="offline_devices">离线设备</string>
    <string name="found_devices">发现新设备</string>
    <string name="havenot_device">没有设备</string>
    <string name="no_lan">远程</string>
    <string name="lan">局域网</string>
    <string name="unbind">未绑定</string>
    <string name="found_many_devices">发现多台设备名，点击选择配置设备</string>
    <string name="no_devices">暂无设备，请添加</string>
    <string name="bound_divices">已绑定设备</string>
    <string name="remove_bound">解除绑定</string>
    <string name="unbound_failed">解绑失败</string>
    <string name="bound_successful">绑定成功</string>
    <string name="bound_failed">绑定失败</string>
    <string name="setsubscribe_failed">订阅失败</string>
    <string name="cancel_logout">确定要退出账号？</string>
    <string name="no">不了</string>
    <string name="doubleclick_logout">再次点击您将注销登录</string>
    <string name="doubleclick_back">再次点击可返回</string>
    <string name="appversion">程序版本：</string>
    <string name="SDKversion">SDK版本：</string>
    <string name="about">关于</string>
    <string name="unknown_device">未识别设备</string>
    <string name="camera_error">相机打开出错，请稍后重试</string>
    <string name="scan">扫一扫，轻松绑定设备</string>
    <string name="QR_code">扫码绑定设备</string>
    <string name="site">设置</string>
    <string name="change_user">注销</string>
    <string name="add_successful">添加成功</string>
    <string name="add_failed">添加失败，请返回重试</string>
    <string name="qr_code_tips">将二维码放入框内，即刻自动扫描</string>
    <string name="scanning_successful">扫码成功</string>
    <string name="not_ticker">Gizwits：您有新设备上线，请注意查看！</string>
    <string name="not_title">新设备</string>
    <string name="not_text">，点击可配置此设备！</string>
    <string name="notify">提醒</string>
    <string name="MAC">MAC：</string>
    <string name="choose_mode_title">模组类型选择</string>
    <string name="choose_mode_start">选择模组类型：</string>
    <string name="configuration_message">请输入Wi-Fi密码，连接您的智能设备</string>
    <string name="five_wifi">注： 暂不支持5G频道的Wi-Fi网络</string>
    <string name="airlink_ready_title">确认设备处于待连接状态</string>
    <string name="airlink_ready_message">接通电源，长按【KEY2】直到【RGB LED】亮绿灯</string>
    <string name="search_join">搜索并连接设备</string>
    <string name="searching_device">正在搜索设备</string>
    <string name="searched_device">已搜索到设备</string>
    <string name="trying_join_device">正在尝试与设备连接...</string>
    <string name="AppID_Toast">请在UIConfig.json文件中填写您在机智云申请的App_ID、App_Secret、Product_Key等</string>
    <string name="TencentAPPID_Toast">请在UIConfig.json文件中填写您在腾讯开放平台申请的App_ID</string>
    <string name="WechatAppID_Toast">请在UIConfig.json文件中填写您在微信开放平台申请的App_ID、App_Secret</string>
    <string name="BDPushAppID_Toast">请在UIConfig.json文件中填写您在百度推送服务平台申请的App_ID</string>
    <string name="No_WXApp">未安装微信客户端</string>
    <string name="GIZ_SDK_PARAM_FORM_INVALID">SDK内部通讯数据格式无效</string>
    <string name="GIZ_SDK_CLIENT_NOT_AUTHEN">SDK未启动</string>
    <string name="GIZ_SDK_CLIENT_VERSION_INVALID">无效的SDK版本号</string>
    <string name="GIZ_SDK_UDP_PORT_BIND_FAILED">UDP端口绑定失败</string>
    <string name="GIZ_SDK_DAEMON_EXCEPTION">SDK后台服务发生异常</string>
    <string name="GIZ_SDK_PARAM_INVALID">接口参数无效</string>
    <string name="GIZ_SDK_APPID_LENGTH_ERROR">AppID长度错误</string>
    <string name="GIZ_SDK_LOG_PATH_INVALID">SDK日志路径无效</string>
    <string name="GIZ_SDK_LOG_LEVEL_INVALID">日志级别无效</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_SEND_FAILED">设备配网信息发送失败</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_IS_RUNNING">设备配网正在执行</string>
    <string name="GIZ_SDK_DEVICE_CONFIG_TIMEOUT">设备配网超时</string>
    <string name="GIZ_SDK_DEVICE_DID_INVALID">设备DID无效</string>
    <string name="GIZ_SDK_DEVICE_MAC_INVALID">设备MAC无效</string>
    <string name="GIZ_SDK_SUBDEVICE_DID_INVALID">子设备DID无效</string>
    <string name="GIZ_SDK_DEVICE_PASSCODE_INVALID">设备验证码无效</string>
    <string name="GIZ_SDK_DEVICE_NOT_SUBSCRIBED">设备还未订阅</string>
    <string name="GIZ_SDK_DEVICE_NO_RESPONSE">设备无响应</string>
    <string name="GIZ_SDK_DEVICE_NOT_READY">设备还未就绪</string>
    <string name="GIZ_SDK_DEVICE_NOT_BINDED">设备还未绑定</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_WITH_INVALID_COMMAND">设备操作指令中包含无效指令</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_FAILED">设备操作失败</string>
    <string name="GIZ_SDK_DEVICE_GET_STATUS_FAILED">设备状态获取失败</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_VALUE_TYPE_ERROR">设备操作指令参数类型错误</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_VALUE_OUT_OF_RANGE">设备操作指令参数值不在有效范围内</string>
    <string name="GIZ_SDK_DEVICE_CONTROL_NOT_WRITABLE_COMMAND">设备操作指令中包含不可写指令</string>
    <string name="GIZ_SDK_BIND_DEVICE_FAILED">设备绑定失败</string>
    <string name="GIZ_SDK_UNBIND_DEVICE_FAILED">设备解绑失败</string>
    <string name="GIZ_SDK_DNS_FAILED">DNS解析失败</string>
    <string name="GIZ_SDK_M2M_CONNECTION_SUCCESS">M2M服务器连接成功</string>
    <string name="GIZ_SDK_SET_SOCKET_NON_BLOCK_FAILED">socket非阻塞设置失败</string>
    <string name="GIZ_SDK_CONNECTION_TIMEOUT">连接超时</string>
    <string name="GIZ_SDK_CONNECTION_REFUSED">连接被拒绝</string>
    <string name="GIZ_SDK_CONNECTION_ERROR">发生了连接错误</string>
    <string name="GIZ_SDK_CONNECTION_CLOSED">连接被对端关闭</string>
    <string name="GIZ_SDK_SSL_HANDSHAKE_FAILED">ssl握手失败</string>
    <string name="GIZ_SDK_DEVICE_LOGIN_VERIFY_FAILED">设备登录验证失败</string>
    <string name="GIZ_SDK_INTERNET_NOT_REACHABLE">手机外网无法访问</string>
    <string name="GIZ_SDK_HTTP_ANSWER_FORMAT_ERROR">HTTP应答格式错误</string>
    <string name="GIZ_SDK_HTTP_ANSWER_PARAM_ERROR">HTTP应答数据错误</string>
    <string name="GIZ_SDK_HTTP_SERVER_NO_ANSWER">HTTP服务端无应答</string>
    <string name="GIZ_SDK_HTTP_REQUEST_FAILED">HTTP请求失败</string>
    <string name="GIZ_SDK_OTHERWISE">其他错误</string>
    <string name="GIZ_SDK_MEMORY_MALLOC_FAILED">内存分配失败</string>
    <string name="GIZ_SDK_THREAD_CREATE_FAILED">线程创建失败</string>
    <string name="GIZ_SDK_USER_ID_INVALID">登录用户ID无效</string>
    <string name="GIZ_SDK_TOKEN_INVALID">登录token无效</string>
    <string name="GIZ_SDK_GROUP_ID_INVALID">设备分组的组ID无效</string>
    <string name="GIZ_SDK_GROUPNAME_INVALID">设备分组的组名称无效</string>
    <string name="GIZ_SDK_GROUP_PRODUCTKEY_INVALID">设备分组的组类型无效</string>
    <string name="GIZ_SDK_GROUP_FAILED_DELETE_DEVICE">设备分组删除失败</string>
    <string name="GIZ_SDK_GROUP_FAILED_ADD_DEVICE">设备分组添加失败</string>
    <string name="GIZ_SDK_GROUP_GET_DEVICE_FAILED">设备分组获取失败</string>
    <string name="GIZ_SDK_DATAPOINT_NOT_DOWNLOAD">设备数据点配置文件还未下载</string>
    <string name="GIZ_SDK_DATAPOINT_SERVICE_UNAVAILABLE">设备数据点配置服务不可用</string>
    <string name="GIZ_SDK_DATAPOINT_PARSE_FAILED">设备数据点解析失败</string>
    <string name="GIZ_SDK_SDK_NOT_INITIALIZED">SDK还未初始化</string>
    <string name="GIZ_SDK_APK_CONTEXT_IS_NULL">Android context为空，无法启动SDK</string>
    <string name="GIZ_SDK_APK_PERMISSION_NOT_SET">使用SDK所需要的Android权限还没有设置</string>
    <string name="GIZ_SDK_CHMOD_DAEMON_REFUSED">SDK后台服务进程的执行权限修改失败</string>
    <string name="GIZ_SDK_EXEC_DAEMON_FAILED">SDK后台服务进程启动失败</string>
    <string name="GIZ_SDK_EXEC_CATCH_EXCEPTION">SDK后台服务进程启动发生异常</string>
    <string name="GIZ_SDK_APPID_IS_EMPTY">AppID为空，无法使用SDK</string>
    <string name="GIZ_SDK_UNSUPPORTED_API">此API已废弃，不再提供支持</string>
    <string name="GIZ_SDK_REQUEST_TIMEOUT">SDK接口执行超时</string>
    <string name="GIZ_SDK_DAEMON_VERSION_INVALID">SDK后台服务版本无效</string>
    <string name="GIZ_SDK_PHONE_NOT_CONNECT_TO_SOFTAP_SSID">手机没有连接设备热点</string>
    <string name="more">更多</string>
    <string name="alias_name">设备名称</string>
    <string name="title_edit_alias">请输入设备名称</string>
    <string name="text_save">保存</string>
    <string name="apm_schedule">预约</string>
    <string name="apm_timing_schedule">定时预约</string>
    <string name="apm_delay_schedule">延时关闭</string>
    <string name="apm_repeat">重复</string>
    <string name="apm_hour">时</string>
    <string name="apm_min">分</string>
    <string name="apm_delay_time_setting">倒计时完毕后，设备将自动关闭。</string>
    <string name="apm_status_open">开启</string>
    <string name="apm_once">仅一次</string>
    <string name="apm_add">添加预约</string>
    <string name="apm_action">动作</string>
    <string name="apm_time">定时</string>
    <string name="apm_no_rule">暂无定时预约任务</string>
</resources>