<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light_gray"
    android:orientation="vertical" >

    <!-- 头部布局开始 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/comd_top" >

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/comd_icon_return"
            android:drawablePadding="5dp"
            android:paddingLeft="10dp"
            android:text="@string/apm_time"
            android:textColor="@color/text_blue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/apm_schedule"
            android:textColor="@color/text_blue"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="20dp"
            android:text="@string/text_save"
            android:textColor="@color/text_blue"
            android:textSize="18sp" />
    </RelativeLayout>
    <!-- 头部布局结束 -->


    <!-- 动作 -->

    <LinearLayout
        android:id="@+id/ll_action"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apm_action"
            android:textColor="@color/text_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/apm_status_open"
            android:textColor="@color/text_gray"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/comd_arrow_right_gray" />
    </LinearLayout>

    <!-- 分割线 -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider_gray" />

    <!-- 重复 -->

    <LinearLayout
        android:id="@+id/ll_repeat"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apm_repeat"
            android:textColor="@color/text_blue"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_repeat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:ellipsize="end"
            android:gravity="right"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:text="@string/apm_once"
            android:textColor="@color/text_gray"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/comd_arrow_right_gray" />
    </LinearLayout>

    <!-- 分割线 -->

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/divider_gray" />

    <!-- 时间选择 -->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/white"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <NumberPicker
                android:id="@+id/np_hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apm_hour"
                android:textSize="18sp" />

            <NumberPicker
                android:id="@+id/np_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apm_min"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/divider_gray" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@color/divider_gray" />
    </FrameLayout>

</LinearLayout>