<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light_gray"
    android:orientation="vertical" >

    <!-- 头部布局开始 -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/comd_top" >

        <ImageView
            android:id="@+id/iv_edit_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:paddingLeft="10dp"
            android:paddingRight="20dp"
            android:src="@drawable/comd_icon_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/alias_name"
            android:textColor="@color/text_blue"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="20dp"
            android:text="@string/text_save"
            android:textColor="@color/gray"
            android:textSize="18sp" />
    </RelativeLayout>
    <!-- 头部布局结束 -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="3dp"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:text="@string/title_edit_alias"
        android:textColor="@color/gray"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <EditText
            android:id="@+id/et_alias"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@color/background_light_gray"
            android:inputType="textMultiLine"
            android:textColor="@color/text_blue"
            android:textSize="18sp" >

            <requestFocus />
        </EditText>

        <ImageView
            android:id="@+id/iv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/comd_ic_clear" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/alert_blue" />

</LinearLayout>